<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/title_activity_options"
    tools:context=".OptionsActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkValor"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:text="@string/equivalencia"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtEquivalencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="numberDecimal" >

    </EditText>

    <CheckBox
        android:id="@+id/chkValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtEquivalencia"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="18dp"
        android:text="@string/valCheck" />

</RelativeLayout>